cleaned up UI, added 3js model, fixed bugs
